[package]
name = "dca"
version = "2.0.1"
authors = ["aidan <aidan@calculated.fi>"]
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
chrono = { version = "0.4.22", default-features = false }
cosmwasm-schema = "1.1.1"
cosmos-sdk-proto = { version = "0.19.0", default-features = false }
cosmwasm-std = { version = "1.2.5", features = ["stargate"] }
cosmwasm-storage = "1.1.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
kujira = "0.7.16"
prost = "0.11.8"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
shared = { path = "../../packages/shared" }
thiserror = { version = "1.0.31" }
exchange = { path = "../../packages/exchange" }

[dev-dependencies]
cw-multi-test = "0.16.4"
rand = "0.8.5"
