[package]
name = "dca"
version = "3.0.5-osmosis"
authors = ["aidan <aidan@calculated.fi>"]
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
exchange = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
shared = { workspace = true }
thiserror = { workspace = true }

prost = "0.11.8"
chrono = { version = "0.4.26", default-features = false }
cosmos-sdk-proto = { version = "0.19.0", default-features = false }

[dev-dependencies]
cw-multi-test = "0.16.4"
rand = "0.8.5"
