[package]
name = "e2e"
version = "0.1.0"
edition = "2021"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc = "3.0.1"
cosm-tome = "0.1.1"
cosmrs = { version = "0.10.0", features = ["rpc", "cosmwasm", "grpc", "bip32"] }
assert_matches = "1.5"
serde_json = "1.0"
env_logger = "0.10.0"
test-context = "0.1.4"
once_cell = "1.13.0"
rand = "0.8"
async-trait = "0.1.74"
tokio = "1.33.0"

astrovault = "0.1.2"

cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = "1.1.2"
serde = { workspace = true, default-features = false, features = ["derive"] }

dca = { workspace = true }
astrovault-calc = { workspace = true }
