[package]
name = "fin"
version = "1.0.0"
authors = ["James Gaddum <james@calculated.fi>"]
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
kujira-fin = "0.8.1"
kujira-std = "0.8.3"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
shared = { path = "../../../packages/shared" }
thiserror = { version = "1.0.31" }
exchange = { path = "../../../packages/exchange" }
