[package]
name = "osmosis"
version = "1.0.2"
authors = ["James Gaddum <james@calculated.fi>"]
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.2.6", features = ["stargate"] }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
osmosis-std = "0.20.1"
prost = "0.11.8"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
shared = { path = "../../../packages/shared" }
thiserror = { version = "1.0.31" }
exchange = { path = "../../../packages/exchange" }
