[package]
name = "osmosis"
version = "1.0.2"
authors = ["James Gaddum <james@calculated.fi>"]
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
exchange = { workspace = true }
osmosis-std = "0.20.1"
prost = "0.11.8"
schemars = { workspace = true }
serde = { workspace = true }
shared = { workspace = true }
thiserror = { workspace = true }
